fix: overflow-x fixed on my objectives feednav

--- a/src/app/pages/feed/feed.component.scss
+++ b/src/app/pages/feed/feed.component.scss
@@ -54,6 +54,7 @@
             &-filter {
               gap: 16px;
               display: flex;
+              overflow-x: scroll;
             }
           }
         }
@@ -97,6 +98,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  overflow-x: scroll;
 }
 
 .bot-icon {
